# ros2_middleware_benchmark

./: README.md  docker-compose.yml
docker/: Dockerfile  entrypoint.sh  zenoh_client_config.json5  zenoh_docker_config.json5  zenoh_peer_config.json5  zenoh_router_config.json5
results/: summary.csv
results/cyclonedds/fanout_imu_10nodes/: docker_stats.csv  sub_1.csv  sub_10.csv  sub_2.csv  sub_3.csv  sub_4.csv  sub_5.csv  sub_6.csv  sub_7.csv  sub_8.csv  sub_9.csv
results/cyclonedds/fanout_imu_20nodes/: docker_stats.csv  sub_1.csv  sub_10.csv  sub_11.csv  sub_12.csv  sub_13.csv  sub_14.csv  sub_15.csv  sub_16.csv  sub_17.csv  sub_18.csv  sub_19.csv  sub_2.csv  sub_20.csv  sub_3.csv  sub_4.csv  sub_5.csv  sub_6.csv  sub_7.csv  sub_8.csv  sub_9.csv
results/cyclonedds/fanout_imu_2nodes/: docker_stats.csv  sub_1.csv  sub_2.csv
results/cyclonedds/fanout_imu_30nodes/: docker_stats.csv  sub_1.csv  sub_10.csv  sub_11.csv  sub_12.csv  sub_13.csv  sub_14.csv  sub_15.csv  sub_16.csv  sub_17.csv  sub_18.csv  sub_19.csv  sub_2.csv  sub_20.csv  sub_21.csv  sub_22.csv  sub_23.csv  sub_24.csv  sub_25.csv  sub_26.csv  sub_27.csv  sub_28.csv  sub_29.csv  sub_3.csv  sub_30.csv  sub_4.csv  sub_5.csv  sub_6.csv  sub_7.csv  sub_8.csv  sub_9.csv
results/cyclonedds/fanout_imu_5nodes/: docker_stats.csv  sub_1.csv  sub_2.csv  sub_3.csv  sub_4.csv  sub_5.csv
scripts/: analyze.py  run_all.py  run_experiment.py
src/: CMakeLists.txt  package.xml
src/include/benchmark_node/: config.hpp
src/src/: clock_check.cpp  publisher_node.cpp  subscriber_node.cpp
(+84 files in other folders)
